--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 	"private": true,
 	"dependencies": {
 		"clipboard-polyfill": "^2.8.1",
+		"js-cookie": "^2.2.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-hot-keys": "^1.3.1",
 		"react-redux": "^7.0.3",
 		"react-scripts": "3.0.1",
 		"rebass": "^3.1.1",
 		"redux": "^4.0.1",
-		"styled-components": "^4.2.0"
+		"styled-components": "^4.2.0",
+		"styled-icons": "^8.1.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
